--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -3,8 +3,12 @@ body {
     margin: 2%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
-    display: block;
+    display: flex;
+    flex-direction: column;
+}
 
+#MainContent {
+    
     display: flex;
     flex-direction: column;
 }
@@ -33,7 +37,11 @@ body {
 @media screen and (max-width: 1000px) {
     
     body {
-        font-size: 2em;
+        margin: 2%;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: large;
+        display: flex;
+        flex-direction: column;
     }
 
     #propStruct {
