--- a/assets/styles/wget.css
+++ b/assets/styles/wget.css
@@ -9,6 +9,7 @@
     color: white;
     font-family: monospace;
     padding: 0.5%;
+    overflow-wrap: anywhere;
 }
 
 .wgetHighlight {
